--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
-    <%= yield %>
-  </body>
+  <div class="home">
+    <h1><%= "Welcome to stupid coach!" %></h1>
+      <%= yield %>
+    </body>
+  </div>
 </html>
